--- a/index.html
+++ b/index.html
@@ -54,13 +54,15 @@
 
 </header>
 
-<section>
+<body>
+    
 
+<section>
         <h6 class="titulo-principal"> Os desafios enfrentados ao sair do
             campo: Soluções e rede de apoio aos agricultores.</h6>
         
 </section>
-
+</body>
 
         <img class="img-casa" src="casinha.png" alt="casa">
 
