--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 
 <head>
-    <title class="titulo"> Urbanizando-se</title>
+    <title class="titulo"> Tecnoagro</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/ font-awesome.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,7 +23,7 @@
     <header>
         <div class="hello-kitty">
             <img class="marca" src="logo hello kitty.png" alt=" logo hello kitty">
-            <h1 class="nome">URBANIZANDO-SE</h1>
+            <h1 class="nome">TECNOAGRO</h1>
 
         </div>
 
@@ -58,8 +58,7 @@
     
 
 
-        <h6 class="titulo-principal"> Os desafios enfrentados ao sair do
-            campo: Soluções e rede de apoio aos agricultores.</h6>
+        <h6 class="titulo-principal"> Tecnologia conectando campo e cidade: Como a inovação no setor tecnologico podem ajudar os agricultores.</h6>
         
 
 
@@ -67,24 +66,26 @@
 
 <div class="apresentação">
 
- <p>Existem diversos problemas enfrentados ao sair do campo e ir para a cidade. 
-    Enganado está quem diz que é fácil.</p>
+ <p>A tecnologia tem ajudado cada vez mais o campo, 
+trazendo soluções que tornam as atividades agrícolas mais eficientes, sustentáveis e precisas.</p>
 <br>
-    <p>Apresentamos alguns dos problemas:</p>
+    <p>Aqui estão algumas das áreas tecnológicas que estão auxiliando diretamente o ambiente agro:
+</p>
 <br>
 
 </div>
 
 <div class="topico">
-    <h2> 1. Falta de oportunidades ; </h2>
+    <h2> 1. Agricultura de Precisão; </h2>
 </div>
 
     <br>
 
 <div class="desenvol">
-    <p>Muitas as vezes, os agricultores podem 
-        não ter habilidades que se encaixam nos empregos urbanos. Além da
-        escassez de vagas de empregos disponíveis em determinada região.</p>
+    <p>A agricultura de precisão usa tecnologia para otimizar a produção agrícola com base em dados coletados sobre o solo, clima e as plantas. 
+Algumas ferramentas incluem: <h2>Sensores de solo e clima</h2>, para monitorar umidade, temperatura e nutrientes do solo em tempo real. <H2> Drones</H2>, utilizados para capturar imagens aéreas das lavouras, identificando áreas que necessitam de cuidados especiais,
+<h2> sistemas de GPS e mapas de produtividade</h2>, 
+que servem para guiar máquinas agrícolas e tomar decisões baseadas em dados geográficos. Entre outras ultilidades</p>
 </div>
 
 <br>
