--- a/index.html
+++ b/index.html
@@ -83,9 +83,10 @@ trazendo soluções que tornam as atividades agrícolas mais eficientes, sustent
 
 <div class="desenvol">
     <p>A agricultura de precisão usa tecnologia para otimizar a produção agrícola com base em dados coletados sobre o solo, clima e as plantas. 
-Algumas ferramentas incluem: <h2>Sensores de solo e clima</h2>, para monitorar umidade, temperatura e nutrientes do solo em tempo real. <H2> Drones</H2>, utilizados para capturar imagens aéreas das lavouras, identificando áreas que necessitam de cuidados especiais,
-<h2> sistemas de GPS e mapas de produtividade</h2>, 
-que servem para guiar máquinas agrícolas e tomar decisões baseadas em dados geográficos. Entre outras ultilidades</p>
+Algumas ferramentas incluem: 
+<h1>Sensores de solo e clima</h1><p>Para monitorar umidade, temperatura e nutrientes do solo em tempo real.</p> 
+<H1> Drones</H1><p>Utilizados para capturar imagens aéreas das lavouras, identificando áreas que necessitam de cuidados especiais</p>
+<h1> sistemas de GPS e mapas de produtividade</h1> <p>Que servem para guiar máquinas agrícolas e tomar decisões baseadas em dados geográficos. Entre outras ultilidades</p>
 </div>
 
 <br>
