--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ trazendo soluções que tornam as atividades agrícolas mais eficientes, sustent
 </div>
 
 <div class="topico">
-    <h2> 1. Agricultura de Precisão; </h2>
+    <h1> 1. Agricultura de Precisão; </h1>
 </div>
 
     <br>
@@ -84,9 +84,9 @@ trazendo soluções que tornam as atividades agrícolas mais eficientes, sustent
 <div class="desenvol">
     <p>A agricultura de precisão usa tecnologia para otimizar a produção agrícola com base em dados coletados sobre o solo, clima e as plantas. 
 Algumas ferramentas incluem: 
-<h1>Sensores de solo e clima</h1><p>Para monitorar umidade, temperatura e nutrientes do solo em tempo real.</p> 
-<H1> Drones</H1><p>Utilizados para capturar imagens aéreas das lavouras, identificando áreas que necessitam de cuidados especiais</p>
-<h1> sistemas de GPS e mapas de produtividade</h1> <p>Que servem para guiar máquinas agrícolas e tomar decisões baseadas em dados geográficos. Entre outras ultilidades</p>
+<h3>Sensores de solo e clima</h3><p>Para monitorar umidade, temperatura e nutrientes do solo em tempo real.</p> 
+<h3> Drones</h3><p>Utilizados para capturar imagens aéreas das lavouras, identificando áreas que necessitam de cuidados especiais</p>
+<h3> sistemas de GPS e mapas de produtividade</h3> <p>Que servem para guiar máquinas agrícolas e tomar decisões baseadas em dados geográficos. Entre outras ultilidades</p>
 </div>
 
 <br>
