--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         
 
 
-        <img class="img-casa" src="casinha.png" alt="casa">
+        <img class="img-tec" src="tecnologia.png" alt="direitos.flaticon">
 
 <div class="apresentação">
 
