--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         
 
 
-        <img class="img-tec" src="tecnologia.png" alt="direitos.flaticon">
+        <img class="img-tec" src="tecnologia.png" alt="direitos.flaticon"> 
 
 <div class="apresentação">
 
@@ -91,15 +91,17 @@ Algumas ferramentas incluem:
 
 <br>
 <div class="topico">
-    <h2>2.Dificuldade na adaptacão e ressocialização urbana ;</h2>
+    <h2>2. Inteligência Artificial e Machine Learning:</h2>
 </div>
 
 <br>
 <div class="desenvol">
-    <p>O estilo de vida urbano é muito diferente do que as pessoas do campo.
-    Com essa mudança elas podem sentir falta do senso da comunidade e 
-    apoio social que tinham no campo, no que pode levar ao sentimento de 
-    isolamento e solidão.</p>
+    <p>A IA e o aprendizado de máquina estão sendo usados para analisar grandes volumes de dados e prever padrões de colheita, 
+        identificar doenças nas plantas, otimizar a distribuição de insumos, e até mesmo melhorar a genética das culturas.</p>
+
+<h3>Algoritmos de previsão:</h3><p>Para prever safras e identificar momentos ideais para plantio e colheita.</p>
+<h3>Monitoramento de saúde das plantas:</h3><p> Softwares que detectam pragas ou doenças por meio da análise de imagens capturadas por drones ou câmeras.</p>
+</p>
 </div>
 <br>
  <div class="topico">
