--- a/index.html
+++ b/index.html
@@ -105,27 +105,55 @@ Algumas ferramentas incluem:
 </div>
 <br>
  <div class="topico">
-    <h2>3.Alto custo de vida na cidade ;</h2>
+    <h2>3. IoT (Internet das Coisas):</h2>
 </div>
 
 <br>
 
 <div class="desenvol">
-<p>Na cidade o custo de vida é muito maior, gerando uma desestabilização 
-    financeira enorme.</p>
+<p>Sensores conectados à internet podem monitorar diversos aspectos da produção agrícola, desde a irrigação até a saúde das plantas. Exemplos incluem:</p>
+<h3>Sistemas de irrigação inteligente:</h3><p> Controlam o uso de água conforme as necessidades específicas do solo e das plantas.</p>
+<h3>Monitoramento de gado:</h3><p> Sensores para rastrear a saúde e os comportamentos dos animais.</p>
 </div>
 
 <br>
 <div class="topico">
-    <h2>4. Acesso limitado a terra e espaço ;</h2>
+    <h2>4. Automação e Máquinas Inteligentes:</h2>
 </div>
 <br>
 <div class="desenvol">    
-<p>Em áreas urbanas muito povoadas, pode ser difícil de encontrar espaços
-     para cultivar alimentos ou manter animais. Limitando as opções de subsistência dos agricultores.</p>
+<p>Máquinas agrícolas estão ficando cada vez mais autônomas. Tratores, colheitadeiras e semeadoras com capacidade de operação automática, 
+guiadas por GPS, podem realizar tarefas de maneira mais eficiente, precisa e sem a necessidade de intervenção constante. </p>
+<h3>Tratores autônomos:</h3> <p>Capazes de semear, plantar e até realizar o cultivo sem um operador humano.</p>
+<h3>Colheitadeiras inteligentes:</h3><p> Otimizam o processo de colheita e reduzem perdas.</p>
+</p>
 </div>
 
 <br>
+
+<div class="topico">
+    <h2>5. Biotecnologia</h2>
+</div>
+<br>
+<div class="desenvol">    
+<p>O avanço da biotecnologia tem permitido o desenvolvimento de cultivos mais resistentes a doenças, pragas e condições climáticas extremas. 
+    Além disso, técnicas como a edição genética (CRISPR) ajudam a criar variedades de plantas mais nutritivas e produtivas.</p>
+<h3>Plantas geneticamente modificadas (OGMs):</h3> <p>Cultivos mais resistentes a secas ou que necessitam de menos defensivos agrícolas.</p>
+<h3>Biofertilizantes e biocombustíveis:</h3><p> Desenvolvimentos que auxiliam na sustentabilidade do campo.</p>
+</div>
+
+<div class="topico">
+    <h2>6. Energia Renovável</h2>
+</div>
+<br>
+<div class="desenvol">    
+<p>A utilização de energias renováveis, como a solar e a eólica, tem se expandido nas fazendas, tornando o processo agrícola mais 
+    sustentável e reduzindo os custos com energia.</p>
+<h3>Sistemas solares para irrigação:</h3> <p>Painéis solares alimentam sistemas de irrigação e bombeamento de água.</p>
+<h3>Biogás:</h3><p> A produção de biogás a partir de resíduos agrícolas pode fornecer energia para as propriedades rurais.</p>
+</div>
+
+
 
 <div class="div">
 
