--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ campo que querem se urbanalizar, seja por vontade, ou por precisão.</p>
 
 <br>
 
-<img class="img-solu" src="solu.png" alt="lampada soluções">
+<img class="img-tec2" src="tecnologia (2).png" alt="flat icon direitos autorais">
 
 <br>
 <div class="topico">
