--- a/comupor.html
+++ b/comupor.html
@@ -66,9 +66,11 @@
 <br>
 
 <section class="section">
-<a href="https://www.faemg.org.br/" target="_blank"><img class="logofaemg" src="logo_faemg.png" alt="logo_faemg"></a>
+<a href="https://cnabrasil.org.br/projetos-e-programas/agricultura-de-precis%C3%A3o" target="_blank"><img class="logosenar" src="logo.png" alt="logo_senar"></a>
 <div class="descri">
-    <p> O SISTEMA FAEMG defende os interesses dos produtores rurais, capacita os profissionais do campo, desenvolvem pesquisas que fomentam o agronegócio no estado, e fornecem programas pelo Brasil.
+    <p> O Senar criou o Programa Agricultura de Precisão com o objetivo de levar conhecimentos sobre a agricultura de precisão
+         para os produtores e trabalhadores rurais, ajudando-os a entender melhor os conceitos dessa ferramenta 
+         possibilitando um aumento de produtividade, renda e maior preservação do meio ambiente.
     </p>
 </div>
 <p class="letrinha-pequena"> clique na imagem e vá direto ao site. </p>
