--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@ Algumas ferramentas incluem:
 <h3>Sensores de solo e clima</h3><p>Para monitorar umidade, temperatura e nutrientes do solo em tempo real.</p> 
 <h3> Drones</h3><p>Utilizados para capturar imagens aéreas das lavouras, identificando áreas que necessitam de cuidados especiais</p>
 <h3> sistemas de GPS e mapas de produtividade</h3> <p>Que servem para guiar máquinas agrícolas e tomar decisões baseadas em dados geográficos. Entre outras ultilidades</p>
+<span class="letrinha-pequena"> confira programas sobre agricultura de precisão na aba oportunidades</span>
 </div>
 
 <br>
@@ -101,7 +102,7 @@ Algumas ferramentas incluem:
 
 <h3>Algoritmos de previsão:</h3><p>Para prever safras e identificar momentos ideais para plantio e colheita.</p>
 <h3>Monitoramento de saúde das plantas:</h3><p> Softwares que detectam pragas ou doenças por meio da análise de imagens capturadas por drones ou câmeras.</p>
-</p>
+<span class="letrinha-pequena"> confira opções dessas citadas na aba oportunidades no menu.</span>
 </div>
 <br>
  <div class="topico">
@@ -114,6 +115,7 @@ Algumas ferramentas incluem:
 <p>Sensores conectados à internet podem monitorar diversos aspectos da produção agrícola, desde a irrigação até a saúde das plantas. Exemplos incluem:</p>
 <h3>Sistemas de irrigação inteligente:</h3><p> Controlam o uso de água conforme as necessidades específicas do solo e das plantas.</p>
 <h3>Monitoramento de gado:</h3><p> Sensores para rastrear a saúde e os comportamentos dos animais.</p>
+<span class="letrinha-pequena"> confira opções dessas citadas na aba oportunidades no menu.</span>
 </div>
 
 <br>
@@ -126,9 +128,12 @@ Algumas ferramentas incluem:
 guiadas por GPS, podem realizar tarefas de maneira mais eficiente, precisa e sem a necessidade de intervenção constante. </p>
 <h3>Tratores autônomos:</h3> <p>Capazes de semear, plantar e até realizar o cultivo sem um operador humano.</p>
 <h3>Colheitadeiras inteligentes:</h3><p> Otimizam o processo de colheita e reduzem perdas.</p>
+<span class="letrinha-pequena"> confira opções dessas citadas na aba oportunidades no menu.</span>
 </p>
 </div>
 
+<br>
+<img class="img-tec2" src="tecnologia (2).png" alt="flat icon direitos autorais">
 <br>
 
 <div class="topico">
@@ -140,6 +145,7 @@ guiadas por GPS, podem realizar tarefas de maneira mais eficiente, precisa e sem
     Além disso, técnicas como a edição genética (CRISPR) ajudam a criar variedades de plantas mais nutritivas e produtivas.</p>
 <h3>Plantas geneticamente modificadas (OGMs):</h3> <p>Cultivos mais resistentes a secas ou que necessitam de menos defensivos agrícolas.</p>
 <h3>Biofertilizantes e biocombustíveis:</h3><p> Desenvolvimentos que auxiliam na sustentabilidade do campo.</p>
+<span class="letrinha-pequena"> confira opções dessas citadas na aba oportunidades no menu.</span>
 </div>
 
 <div class="topico">
@@ -151,6 +157,7 @@ guiadas por GPS, podem realizar tarefas de maneira mais eficiente, precisa e sem
     sustentável e reduzindo os custos com energia.</p>
 <h3>Sistemas solares para irrigação:</h3> <p>Painéis solares alimentam sistemas de irrigação e bombeamento de água.</p>
 <h3>Biogás:</h3><p> A produção de biogás a partir de resíduos agrícolas pode fornecer energia para as propriedades rurais.</p>
+<span class="letrinha-pequena"> confira opções dessas citadas na aba oportunidades no menu.</span>
 </div>
 
 
@@ -165,7 +172,7 @@ campo que querem se urbanalizar, seja por vontade, ou por precisão.</p>
 
 <br>
 
-<img class="img-tec2" src="tecnologia (2).png" alt="flat icon direitos autorais">
+
 
 <br>
 <div class="topico">
