--- a/comupor.html
+++ b/comupor.html
@@ -66,7 +66,7 @@
 <br>
 
 <section class="section">
-<a href="https://cnabrasil.org.br/projetos-e-programas/agricultura-de-precis%C3%A3o" target="_blank"><img class="logosenar" src="logo.png" alt="logo_senar"></a>
+<a href="https://cnabrasil.org.br/projetos-e-programas/agricultura-de-precis%C3%A3o" target="_blank"><img class="logosenar" src="logosistemafaep.jpg" alt="logo_senar"></a>
 <div class="descri">
     <p> O Senar criou o Programa Agricultura de Precisão com o objetivo de levar conhecimentos sobre a agricultura de precisão
          para os produtores e trabalhadores rurais, ajudando-os a entender melhor os conceitos dessa ferramenta 
