--- a/index.html
+++ b/index.html
@@ -164,69 +164,15 @@ guiadas por GPS, podem realizar tarefas de maneira mais eficiente, precisa e sem
 
 <div class="div">
 
-<p>Essas são apenas algumas das dificuldades enfrentadas por pessoas do
-campo que querem se urbanalizar, seja por vontade, ou por precisão.</p>
-<p>Mas, assim como todos os problemas, existem soluções. Vamos te contar alguns deles ;</p>
+<p>Essas são apenas algumas das portas que a tecnologia pode abrir a pessoas do agronegócio e que querem inseriri-lá, para maior e melhor produtividade.</p>
+<p>Para te auxiliar, criamos uma aba oportunidades. Onde contamos lugares e programas que podem te ajudar a fazer esta modernização na sua lavoura e empresas
+que oferecem empregos nesta área(campo e tecnologia).</p>
 
 </div>
 
 <br>
 
 
-
-<br>
-<div class="topico">
-<h2>1.Programas de capacitação e
-    assistência na busca de emprego;</h2>
-</div>
-    <br>
-
-<div class="desenvol">
-    <p>Oferecer programas de capacitação e
-    treinamento para ajudar os agricultores a adquirir
-    as habilidades necessárias para se inserirem no mercado 
-    de trabalho urbano, e criar serviços de apoio para  ajudar os 
-    agricultores a encontrar empregos na cidade, como agências 
-    de emprego especializadas, programas de mentoria e feiras de emprego 
-    voltadas para trabalhadores rurais. <span class="letrinha-pequena"> confira opções dessas citadas na aba oportunidades no menu.</span></p> 
-</div>
-   
-<br>
-
-<div class="topico">
-     <h2>2.Fortalecimento da conexão com a comunidade;</h2>
-</div>
-<br>
-<div class="desenvol">
-        <p> Criar espaços e oportunidades para os agricultores conversarem com
-        outras pessoas que compartilham suas experiências e interesses, como 
-        grupos de networking, associações de migrantes rurais e eventos 
-        culturais. Implementar programas de saúde mental e bem-estar para 
-        ajudar os agricultores a lidar com os desafios emocionais e psicológicos 
-        da transição para a vida urbana, como serviços de aconselhamento,
-        grupos de apoio e atividades recreativas.
-    <span class="letrinha-pequena"> nos conte sua experiência na nossa aba comunidade no menu. </span></p>
-</div>
-
-<br>
-    
-<div class="topico">
-        <h2>3. Desenvolvimento de projetos de políticas e terras públicas;</h2>
-</div> 
-
-<br>   
-<div class="desenvol">
-        <p>Implementar programas que forneçam acesso a terra e recursos para 
-            agricultura urbana, como hortas comunitárias, espaços de cultivo     
-            compartilhados e incentivos para a criação de pequenas propriedades    
-            agrícolas em áreas urbanas e desenvolver políticas públicas que 
-            incentivem a inclusão social e econômica dos agricultores migrantes,    
-            como programas de habitação acessível, subsídios para transporte    
-            público e apoio financeiro para a criação de pequenos negócios.
-    <span class="letrinha-pequena"> confira algumas hortas comunitarias na aba oportunidades no menu.</span></p> 
- </div>
-
-</div>
 
 
 <div vw class="enabled">
