--- a/comupor.html
+++ b/comupor.html
@@ -77,9 +77,10 @@
 <br>
 
 <section class="section">
-<a href="https://encurtador.com.br/9cfcz" target="_blank"><img class="logoadvance" src="logo_agroadvance.png" alt="logo_agroadvance"></a>
+<a href="https://portal.uniasselvi.com.br/graduacao/tecnologo/inteligencia-artificial-e-machine-learning/ead" target="_blank"><img class="logouniasselvi" src="logo_uniasselvi.png" alt="logo_uniasselvi"></a>
 <div class="descri">
-    <p>Utilizando algumas técnicas de ensino eles ajudam a “transformar” o agronegócio, sendo acessíveis para pessoas e empresas, através de cursos on-line</p>
+    <p>O curso Superior de Tecnologia em Inteligência Artificial e Machine Learning da Uniasselvi é a opção ideal para quem tem interesse em criar modelos de aprendizado de máquina, algoritmos de processamento de linguagem natural e sistemas autônomos,
+         e querem se familiarizar com as ferramentas e tecnologias usadas para desenvolver soluções de IA inovadoras em diversos domínios. </p>
 </div>
 <p class="letrinha-pequena"> clique na imagem e vá direto ao site. </p>
 </section>
@@ -87,9 +88,10 @@
 <br>
 
 <section class="section">
-<a href="https://encurtador.com.br/OQQJw" target="_blank"><img class="logobne" src="logo_bne.png" alt="logo_bne"></a>
+<a href="https://encurtador.com.br/73Uyv" target="_blank"><img class="logoanhanguera" src="logo_aranhanguera.jpg" alt="logo_aranhanguera"></a>
 <div class="descri">
-    <p>O BNE é um site que ajuda as pessoas a encontrar um emprego, tendo tambem vagas no agronegócio como trabalhador rural, etc.</p>
+    <p>Destina-se a graduados de diferentes formações, como tecnologia, engenharia, gestão e também para profissionais que desejam descobrir e aplicar soluções tecnológicas 
+        para transformar regras de negócios de uma empresa em uma grande transformação digital.</p>
 </div>
 <p class="letrinha-pequena"> clique na imagem e vá direto ao site. </p>
 </section>
@@ -97,13 +99,37 @@
 <br>
 
 <section class="section1">
-<a href="https://www.trabalhabrasil.com.br/" target="_blank"><img class="logobr" src="logo_trab.png" alt="logo_trab"></a>
+<a href="https://encurtador.com.br/1ik3o" target="_blank"><img class="logoudemy" src="logo_udemy.png" alt="logo_udemy"></a>
 <div class="descri">
-    <p>O Trabalha Brasil é um Classificado online de vagas gratuito, que tem como objetivo conectar os trabalhadres aos empregadores de forma ágil e fácil.
+    <p>Com o curso de Automação Industrial em Ambiente Virtual, você vai desenvolver seus conhecimentos em programação e criação de códigos que permitem controlar máquinas e processos industriais de forma automatizada.
     </p>
 </div>
 <p class="letrinha-pequena"> clique na imagem e vá direto ao site. </p>
 </section>
+
+<br>
+
+<section class="section">
+<a href="https://encurtador.com.br/bxOgC" target="_blank"><img class="logounyleya" src="logo_unyleya.jpg" alt="logo_unyleya"></a>
+<div class="descri">
+    <p>Com  o curso oferecido pela unyleya, você pode contribuir para o desenvolvimento de novos produtos e processos,
+         da ciência e da tecnologia, bem como para a preservação ambiental, alem de Interagir em vários campos da Ciência e na interface Ciência, indústria e economia.
+</p>
+</div>
+<p class="letrinha-pequena"> clique na imagem e vá direto ao site. </p>
+</section>
+
+<br>
+
+<section class="section">
+<a href="https://encurtador.com.br/2Rnjs" target="_blank"><img class="logorwsolares" src="logo_rwsolares.png" alt="logo_rwsolares"></a>
+<div class="descri">
+    <p>A empresa RW solares vende placas solares. Uma ótima opção de energia renovavél que economiza na conta de energia, auxiliando na diminuição de despesas na sua empresa. </p>
+</div>
+<p class="letrinha-pequena"> clique na imagem e vá direto ao site. </p>
+</section>
+
+<br>
 
 <section class="section">
 
