--- a/comupor.html
+++ b/comupor.html
@@ -76,7 +76,7 @@
  
 <br>
 
-<section class="section">
+<section class="section2">
 <a href="https://portal.uniasselvi.com.br/graduacao/tecnologo/inteligencia-artificial-e-machine-learning/ead" target="_blank"><img class="logouniasselvi" src="logo_uniasselvi.png" alt="logo_uniasselvi"></a>
 <div class="descri">
     <p>O curso Superior de Tecnologia em Inteligência Artificial e Machine Learning da Uniasselvi é a opção ideal para quem tem interesse em criar modelos de aprendizado de máquina, algoritmos de processamento de linguagem natural e sistemas autônomos,
