--- a/comupor.html
+++ b/comupor.html
@@ -133,12 +133,12 @@
 
 <section class="section">
 
-   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3718499.231361256!2d-50.637911749222916!3d-24.473434322628343!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94dce523ba9987f7%3A0x2de87931412af078!2sSmart%20Cultivo%20Indoor!5e0!3m2!1spt-BR!2sbr!4v1748272188035!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3718499.231361256!2d-50.637911749222916!3d-24.473434322628343!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94dce523ba9987f7%3A0x2de87931412af078!2sSmart%20Cultivo%20Indoor!5e0!3m2!1spt-BR!2sbr!4v1748272188035!5m2!1spt-BR!2sbr"width="320" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade""></iframe> </a>
     <div class="descri">
         <p>Aqui nós disponibilizamos a rota para chegar até o Smart Cultivo Indoor. O cultivo indoor é um meio de cultivo de plantas em um ambiente fechado em que as condições para desenvolvimento da planta são produzidas de forma artificial para criar as condições ideais para as plantas.
         </p>
     </div>
-    <a href="https://smartcultivoindoor.com.br/"><p class="letrinha-pequena1"> clique aqui e vá direto para o site deles </p></a>
+    <a href="https://smartcultivoindoor.com.br/"><p class="letrinha-pequena1"> clique aqui e vá direto para o site </p></a>
     </section>
 
 <br>
