--- a/comupor.html
+++ b/comupor.html
@@ -145,8 +145,8 @@
 <br>
 <br>
 
-<section>
-<div class="topico" id="">
+<section >
+<div class="topico3" >
     <h2>Comunidade</h2>
 </div>
 <br>
@@ -154,7 +154,9 @@
         <p> Vamos tentar criar uma rede de apoio, com trocas de experiências, histórias de superação do campo à cidade, e conselhos para agricultores. Nos conte sua experiência!!</p>
 </div>
 <br>
+</section>
 
+<section class="caixinha">
 <div class="caixa-comunidade">
  
     <form>
