--- a/comupor.html
+++ b/comupor.html
@@ -145,11 +145,14 @@
 <br>
 <br>
 
-<section >
+<section class="cominiti" >
 <div class="topico" >
     <h2>Comunidade</h2>
 </div>
 <br>
+</section>
+
+<section class="cominiti">
 <div class="desenvol">
         <p> Vamos tentar criar uma rede de apoio, com trocas de experiências, histórias de superação do campo à cidade, e conselhos para agricultores. Nos conte sua experiência!!</p>
 </div>
