--- a/comupor.html
+++ b/comupor.html
@@ -186,11 +186,11 @@
 </section>
 
 <section >
-<div class="topico" id="">
+<div class="topico3" id="">
     <h2>Contatos</h2>
 </div>
 <br>
-<div class="desenvol">
+<div class="desenvol3">
         <p ><a class="rede-social" href="https://www.instagram.com/urbanizando_se?igsh=aWs1NnFsaG40bDc3" target="_blank">Instragram: Urbanizando_se</a>
             <br>
             Telefone: (41) 9 9922-7430
