--- a/comupor.html
+++ b/comupor.html
@@ -54,7 +54,7 @@
 <body>
 </header>
 
-<div class="topico1" id="">
+<div class="topico1" id="oportunidades">
     <h1>Oportunidades</h1>
 </div>
 <br>
@@ -145,7 +145,7 @@
 <br>
 <br>
 
-<section class="cominiti" >
+<section class="cominiti" id="comunidade" >
 <div class="topico" >
     <h2>Comunidade</h2>
 </div>
@@ -174,7 +174,7 @@
 </section>
 
 <section >
-<div class="quem_somos" id="">
+<div class="quem_somos" id="quem somos">
     <h2>Quem somos</h2>
 </div>
 <br>
