--- a/comupor.html
+++ b/comupor.html
@@ -146,14 +146,14 @@
 <br>
 
 <section class="cominiti" id="comunidade" >
-<div class="topico" >
+<div class="topico3" >
     <h2>Comunidade</h2>
 </div>
 <br>
 </section>
 
 <section class="cominiti">
-<div class="desenvol">
+<div class="desenvol3">
         <p> Vamos tentar criar uma rede de apoio, com trocas de experiências, histórias de superação do campo à cidade, e conselhos para agricultores. Nos conte sua experiência!!</p>
 </div>
 <br>
@@ -186,11 +186,11 @@
 </section>
 
 <section >
-<div class="topico3" id="">
+<div class="topico" id="">
     <h2>Contatos</h2>
 </div>
 <br>
-<div class="desenvol3">
+<div class="desenvol">
         <p ><a class="rede-social" href="https://www.instagram.com/urbanizando_se?igsh=aWs1NnFsaG40bDc3" target="_blank">Instragram: Urbanizando_se</a>
             <br>
             Telefone: (41) 9 9922-7430
