--- a/comupor.html
+++ b/comupor.html
@@ -164,10 +164,11 @@
  
     <form>
      <input type="hidden" name="accessKey" value="e44fc5d0-0b52-4cb1-9f79-fefc3800d89c">
-     <input type="text" name="name" class="texto-comunidade" placeholder="Conte sua história, experiência ou conselhos para pessoas nova na sociedade urbana obs.iremos publicar os relatos no nosso perfil do instagram)."
-     <button class="botao" type="submit" onclick="msg()">envie</button>>
+     <input type="text" name="name" class="texto-comunidade" placeholder="Conte sua história, experiência ou conselhos para pessoas nova na sociedade urbana obs.iremos publicar os relatos no nosso perfil do instagram).">
+     <button class="botao" type="submit" onclick="msg()"> envie</button>
     </form>
 
+</div>
 </div>
 <br>
 <br>
