--- a/comupor.html
+++ b/comupor.html
@@ -205,7 +205,7 @@
 
         </form>
     </div>
-    <button class="botao" type="submit" onclick="msg()"> envie</button>
+    <div><button class="botao" type="submit" onclick="msg()"> envie</button></div>
 </div>
 
 <br>
