--- a/comupor.html
+++ b/comupor.html
@@ -245,13 +245,17 @@
 <br>
 
 
-
-<script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
-
-<script>
+<div vw class="enabled">
+    <div vw-access-button class="active"></div>
+    <div vw-plugin-wrapper>
+      <div class="vw-plugin-top-wrapper"></div>
+    </div>
+  </div>
+  <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+  <script>
     new window.VLibras.Widget('https://vlibras.gov.br/app');
-</script>
-
+  </script>
+  
 <script>
 
     function abrirMenu() {
