--- a/comupor.html
+++ b/comupor.html
@@ -212,39 +212,6 @@
 <br>
 </section>
 
-<section>
-    <div class="quem_somos" id="quem somos">
-        <h2>Quem somos</h2>
-    </div>
-    <br>
-    <div class="desenvol">
-        <p> Nós somos uma equipe que esta disposta a ajudar as pessoas a se adaptarem no ambiente urbano, ou seja, do
-            campo à cidade.
-        </p>
-    </div>
-    <br>
-</section>
-
-<section>
-    <div class="topico" id="">
-        <h2>Contatos</h2>
-    </div>
-    <br>
-    <div class="desenvol">
-        <p><a class="rede-social" href="https://www.instagram.com/urbanizando_se?igsh=aWs1NnFsaG40bDc3"
-                target="_blank">Instragram: Urbanizando_se</a>
-            <br>
-            Telefone: (41) 9 9922-7430
-            <br>
-            <a class="rede-social" href=mailto:urbanizando_se@gmail.com
-                subject="https://sustentabilizando-se.vercel.app/" target="_blank">Email : urbanizando_se@gmail.com </a>
-            <br>
-        </p>
-    </div>
-</section>
-<br>
-
-
 <div vw class="enabled">
     <div vw-access-button class="active"></div>
     <div vw-plugin-wrapper>
@@ -289,11 +256,10 @@
         <div class="boxs">
             <h2>Informações</h2>
             <ul>
-                <li><a href="comupor.html#Quem somos">Quem somos</a></li>
+                <li><a href="https://www.instagram.com/urbanizando_se?igsh=aWs1NnFsaG40bDc3">Quem somos</a></li>
+                <li><a href="https://web.whatsapp.com/">Contato</a></li>
+                <li><a href="urbanizando_se@gmail.com">Email</a></li>
 
-                <li><a href="comupor.html#contatos">Contato</a></li>
-
-                <li><a href="comupor.html#contatos">Email</a></li>
             </ul>
         </div>
 
