--- a/index.html
+++ b/index.html
@@ -219,9 +219,9 @@ que oferecem empregos nesta área(campo e tecnologia).</p>
     <ul>
         <li><a href="comupor.html#Quem somos">Quem somos</a></li>
 
-        <li><a href="comupor.html#contatos">Contato</a></li>
+        <li><a href="https://web.whatsapp.com/">Contato</a></li>
 
-        <li><a href="comupor.html#contatos">Email</a></li>
+        <li><a href="urbanizando_se@gmail.com">Email</a></li>
     </ul>
 </div>
 
