--- a/comupor.html
+++ b/comupor.html
@@ -190,7 +190,7 @@
 
 <section class="cominiti">
     <div class="desenvol3">
-        <p> Vamos tentar criar uma rede de apoio, com trocas de experiências, histórias de superação do campo à cidade,
+        <p> Vamos tentar criar uma rede de auxilio, com trocas de experiências, histórias de inserção da tecnologia no campo,
             e conselhos para agricultores. Nos conte sua experiência!!</p>
     </div>
     <br>
@@ -201,7 +201,7 @@
         <form>
             <input type="hidden" name="accessKey" value="e44fc5d0-0b52-4cb1-9f79-fefc3800d89c">
             <input type="text" name="name" class="texto-comunidade"
-                placeholder="Conte sua história, experiência ou conselhos para pessoas nova na sociedade urbana obs.iremos publicar os relatos no nosso perfil do instagram).">
+                placeholder="Conte sua história, experiência ou conselhos para pessoas que querem tecnologizar o campo.">
 
         </form>
     </div>
