--- a/comupor.html
+++ b/comupor.html
@@ -256,9 +256,9 @@
         <div class="boxs">
             <h2>Informações</h2>
             <ul>
-                <li><a href="https://www.instagram.com/urbanizando_se?igsh=aWs1NnFsaG40bDc3">Quem somos</a></li>
-                <li><a href="https://web.whatsapp.com/">Contato</a></li>
-                <li><a href="urbanizando_se@gmail.com">Email</a></li>
+                <li><a href="https://www.instagram.com/urbanizando_se?igsh=aWs1NnFsaG40bDc3" target="_blank">Quem somos</a></li>
+                <li><a href="https://web.whatsapp.com/"target="_blank">Contato</a></li>
+                <li><a href="urbanizando_se@gmail.com"target="_blank">Email</a></li>
 
             </ul>
         </div>
